--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body class="bg-dark">
+<body class="bg-secondary">
   <header id="Home" class="text-center fst-italic fw-bold text-white" >
     <h1>Restaurant chez l'ancien</H1>
   </header>
@@ -88,7 +88,7 @@
   <h1 id="classique" class="text-white fst-italic text-center mx-0 my-5 p-2 bg-warning" >Nos specials</h1>
  </section>
  <section class="my-5 d-flex text-center justify-content-around">
-  <div class="card" style="width: 18rem;background-color: rgba(153, 181, 191, 0.905); color: black;">
+  <div class="card" style="width: 18rem;">
     <img src="https://s3-eu-west-1.amazonaws.com/images-ca-1-0-1-eu/recipe_photos/original/229/couscous-poulet-merguez-AdobeStock_106871763.jpg" class="card-img-top" alt="...">
     <div class="card-body ">     
       <h5 class="card-title">Couscous</h5>
@@ -214,8 +214,8 @@
 
   </footer>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="./js/main.js"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   </body>
 </html>
