--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
   <H5>Restaurant chez l'ancien</H5>
   <p>Rue des poitier 13 1070 Anderlecht</p>
   <P>0495869594</P>
+  <p>Newsletter :</p><input type="placeholder" name="Newsletter"><button class="newsletter">Abonne toi</button>
   </div>
   <div>
   <H4>Payer nous</H3>
