--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="card-body ">     
       <h5 class="card-title">Couscous</h5>
       <p class="card-text">Un couscous marocain traditionnel, simple à réaliser, qui constitue un excellent plat familial.  </p>
-      <a href="/page/Couscous.html" class="btn btn-warning fw-bold text-white fst-italic text-center mx-0 my-2 p-2">Voir la recette</a>
+      <a class="btn btn-warning fw-bold text-white fst-italic text-center mx-0 my-2 p-2">Voir la recette</a>
 
     </div>
   </div>
@@ -102,7 +102,7 @@
     <div class="card-body">
       <h5 class="card-title">Pizza margherita</h5>
       <p class="card-text">La pizza margherita est une spécialité culinaire traditionnelle de la ville de Naples, en Italie.</p>
-      <a href="page/Pizza.html" class="btn btn-warning fw-bold text-white fst-italic text-center mx-0 my-2 p-2">Voir la recette</a>
+      <a  class="btn btn-warning fw-bold text-white fst-italic text-center mx-0 my-2 p-2">Voir la recette</a>
     </div>
   </div>
   <div class="card" style="width: 18rem; background-color: rgba(153, 181, 191, 0.905); color: black;">
@@ -110,7 +110,7 @@
     <div class="card-body">
       <h5 class="card-title">Poulet champignions</h5>
       <p class="card-text">Poulet champignions accompagné de riz ou de pâte et la sauce du chef</p>
-      <a href="page/Poulet.html" class="btn btn-warning fw-bold text-white fst-italic text-center mx-0 my-2 p-2">Voir la recette</a>
+      <a  class="btn btn-warning fw-bold text-white fst-italic text-center mx-0 my-2 p-2">Voir la recette</a>
     </div>
   </div>
 </section>
