--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="card-body">
       <h5 class="card-title">Msemen</h5>
       <p class="card-text">Délicieuses crêpes feuilletées marocaines, croustillantes à l’extérieur et moelleuses à l’intérieur.</p>
-      <a href="page/msemen.html" class="btn btn-warning fw-bold  text-white text-center mx-0 my-2 p-2 ">Voir la recette</a>
+      <a href="" class="btn btn-warning fw-bold  text-white text-center mx-0 my-2 p-2 ">Voir la recette</a>
     </div>
   </div>
 </section>
